enable glass panel for depth charts popup and fix drag helper z-index

--- a/src/main/java/com/mayhew3/drafttower/client/MainPageWidget.css
+++ b/src/main/java/com/mayhew3/drafttower/client/MainPageWidget.css
@@ -62,3 +62,7 @@
   background: white;
   font-size: 70%;
 }
+
+.glassPanel {
+  background: rgba(0, 0, 0, 0.4);
+}
