--- a/src/main/java/com/mayhew3/drafttower/client/PlayerTable.css
+++ b/src/main/java/com/mayhew3/drafttower/client/PlayerTable.css
@@ -30,6 +30,7 @@
   color: black !important;
   border: 1px solid #CCC;
   pointer-events: none;
+  z-index: 2;
 }
 
 .dropHover td {
